--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "isomorphic-unfetch": "^2.0.0",
         "next": "6.0.0",
         "react": "^16.0.0"
+
     },
     "devDependencies": {
         "autoprefixer": "7.1.5",
@@ -35,6 +36,7 @@
         "raw-loader": "0.5.1",
         "react-dom": "^16.2.0",
         "sass-loader": "^6.0.6",
-        "webpack": "^3.10.0"
+        "webpack": "^3.10.0",
+        "resolve-url-loader": "^3.0.0"
     }
 }
