--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "next build",
+        "build": "NODE_ENV=production next build",
         "start": "node server.js",
         "docker:build": "docker build -t frontend .",
         "docker:clean": "docker rm -f frontend || true",
@@ -21,10 +21,9 @@
         "express": "^4.16.2",
         "isomorphic-unfetch": "^2.0.0",
         "next": "6.0.0",
-        "react": "^16.0.0"
-
-    },
-    "devDependencies": {
+        "react": "^16.0.0",
+        "react-dom": "^16.6.0",
+        "webpack": "^3.10.0",
         "autoprefixer": "7.1.5",
         "babel-plugin-module-resolver": "^2.7.1",
         "babel-plugin-wrap-in-js": "^1.1.0",
@@ -34,9 +33,10 @@
         "postcss-easy-import": "^3.0.0",
         "postcss-loader": "^2.0.7",
         "raw-loader": "0.5.1",
-        "react-dom": "^16.2.0",
-        "sass-loader": "^6.0.6",
-        "webpack": "^3.10.0",
-        "resolve-url-loader": "^3.0.0"
+        "resolve-url-loader": "^3.0.0",
+        "sass-loader": "^6.0.6"
+    },
+    "devDependencies": {
+
     }
 }
