--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,25 +18,24 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.16.2",
-        "isomorphic-unfetch": "^2.0.0",
-        "next": "6.0.0",
-        "react": "^16.0.0",
-        "react-dom": "^16.6.0",
-        "webpack": "^3.10.0",
         "autoprefixer": "7.1.5",
         "babel-plugin-module-resolver": "^2.7.1",
         "babel-plugin-wrap-in-js": "^1.1.0",
+        "express": "^4.16.2",
         "glob": "^7.1.2",
+        "gsap": "^2.0.2",
+        "isomorphic-unfetch": "^2.0.0",
+        "next": "6.0.0",
         "node-sass": "^4.4.0",
         "normalize.css": "^7.0.0",
         "postcss-easy-import": "^3.0.0",
         "postcss-loader": "^2.0.7",
         "raw-loader": "0.5.1",
+        "react": "^16.0.0",
+        "react-dom": "^16.6.0",
         "resolve-url-loader": "^3.0.0",
-        "sass-loader": "^6.0.6"
+        "sass-loader": "^6.0.6",
+        "webpack": "^3.10.0"
     },
-    "devDependencies": {
-
-    }
+    "devDependencies": {}
 }
