--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
         "raw-loader": "0.5.1",
         "react": "^16.0.0",
         "react-dom": "^16.6.0",
+        "react-svg-inline": "^2.1.1",
         "resolve-url-loader": "^3.0.0",
         "sass-loader": "^6.0.6",
         "webpack": "^3.10.0"
