--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@inlet/react-pixi": "^0.4.1",
         "autoprefixer": "7.1.5",
         "babel-plugin-module-resolver": "^2.7.1",
         "babel-plugin-wrap-in-js": "^1.1.0",
@@ -28,11 +29,13 @@
         "next": "6.0.0",
         "node-sass": "^4.4.0",
         "normalize.css": "^7.0.0",
+        "pixi.js": "^4.8.3",
         "postcss-easy-import": "^3.0.0",
         "postcss-loader": "^2.0.7",
         "raw-loader": "0.5.1",
         "react": "^16.0.0",
         "react-dom": "^16.6.0",
+        "react-pixi-fiber": "^0.6.2",
         "react-svg-inline": "^2.1.1",
         "resolve-url-loader": "^3.0.0",
         "sass-loader": "^6.0.6",
