--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
         "react-dom": "^16.6.0",
         "react-pixi-fiber": "^0.6.2",
         "react-svg-inline": "^2.1.1",
+        "react-swipeable": "^4.3.1",
         "resolve-url-loader": "^3.0.0",
         "sass-loader": "^6.0.6",
         "webpack": "^3.10.0"
