--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "autoprefixer": "7.1.5",
         "babel-plugin-module-resolver": "^2.7.1",
         "babel-plugin-wrap-in-js": "^1.1.0",
+        "cssnano": "^4.1.8",
         "express": "^4.16.2",
         "glob": "^7.1.2",
         "gsap": "^2.0.2",
