--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
         "raw-loader": "0.5.1",
         "react": "^16.0.0",
         "react-dom": "^16.6.0",
+        "react-ga": "^2.5.6",
         "react-pixi-fiber": "^0.6.2",
         "react-svg-inline": "^2.1.1",
         "react-swipeable": "^4.3.1",
