--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,8 @@
         "next": "6.0.0",
         "node-sass": "^4.4.0",
         "normalize.css": "^7.0.0",
+        "now": "^17.0.4",
+        "now-builders": "github:zeit/now",
         "pixi.js": "^4.8.3",
         "postcss-easy-import": "^3.0.0",
         "postcss-loader": "^2.0.7",
