--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,8 @@
         "glob": "^7.1.2",
         "gsap": "^2.0.2",
         "isomorphic-unfetch": "^2.0.0",
-        "next": "6.0.0",
-        "node-sass": "^4.4.0",
+        "next": "^9.3.1",
+        "node-sass": "^4.13.1",
         "normalize.css": "^7.0.0",
         "now": "^17.0.4",
         "now-builders": "github:zeit/now",
@@ -44,7 +44,7 @@
         "react-swipeable": "^4.3.1",
         "resolve-url-loader": "^3.0.0",
         "sass-loader": "^6.0.6",
-        "webpack": "^3.10.0"
+        "webpack": "^4.42.0"
     },
     "devDependencies": {}
 }
